--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   , "author"          : "Xueqiao Xu <xueqiaoxu@gmail.com>"
   , "main"            : "./index.js"
   , "dependencies"    : {}
-  , "devDependencies" : {}
+  , "devDependencies" : {
+      "uglify-js"       : ">= 1.2.5"
+    , "browserify"      : ">= 1.9.3"
+    , "mocha"           : ">= 0.10.2"
+    , "should"          : ">= 0.5.1"
+  }
   , "repository"      : {
       "type"          : "git"
-      "url"           : "git://github.com/qiao/PathFinding.js.git"
+    , "url"           : "git://github.com/qiao/PathFinding.js.git"
   }
   , "licenses"        : [{
       "type"          :  "MIT"
-      "url"           : "http://opensource.org/licenses/mit-license.php"
+    , "url"           : "http://opensource.org/licenses/mit-license.php"
   }]
 }
