--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"            : "pathfinding"
-  , "version"         : "0.3.0"
+  , "version"         : "0.3.1"
   , "description"     : "Comprehensive pathfinding library for grid based games"
   , "homepage"        : "https://github.com/qiao/PathFinding.js"
   , "keywords"        : ["algorithm", "game"]
@@ -9,9 +9,9 @@
   , "dependencies"    : {}
   , "devDependencies" : {
       "uglify-js"       : ">= 1.2.5"
-    , "browserify"      : ">= 1.9.3"
-    , "mocha"           : ">= 0.10.2"
-    , "should"          : ">= 0.5.1"
+    , "browserify"      : "1.10.8"
+    , "mocha"           : "1.0.x"
+    , "should"          : "0.6.x"
   }
   , "repository"      : {
       "type"          : "git"
