--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-    "name"            : "pathfinding"
-  , "version"         : "0.4.13"
-  , "description"     : "Comprehensive pathfinding library for grid based games"
-  , "homepage"        : "https://github.com/qiao/PathFinding.js"
-  , "keywords"        : ["algorithm", "game"]
-  , "author"          : "Xueqiao Xu <xueqiaoxu@gmail.com>"
-  , "main"            : "./index.js"
-  , "dependencies"    : {
-      "heap"          : "0.2.2"
-  }
-  , "devDependencies" : {
-      "uglify-js"       : "2.3.6"
-    , "colors"          : "0.6.x"
-    , "browserify"      : "6.0.3"
-    , "mocha"           : "1.0.x"
-    , "should"          : "0.6.x"
-  }
-  , "scripts"         : {
-      "test"            : "make test"
-  }
-  , "repository"      : {
-      "type"          : "git"
-    , "url"           : "git://github.com/qiao/PathFinding.js.git"
-  }
-  , "licenses"        : [{
-      "type"          :  "MIT"
-    , "url"           : "http://opensource.org/licenses/mit-license.php"
-  }]
+  "name": "pathfinding",
+  "version": "0.4.13",
+  "description": "Comprehensive pathfinding library for grid based games",
+  "homepage": "https://github.com/qiao/PathFinding.js",
+  "keywords": [
+    "algorithm",
+    "game"
+  ],
+  "author": "Xueqiao Xu <xueqiaoxu@gmail.com>",
+  "main": "./index.js",
+  "dependencies": {
+    "heap": "0.2.2"
+  },
+  "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.1",
+    "mocha": "1.0.x",
+    "should": "0.6.x",
+  },
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/qiao/PathFinding.js.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/mit-license.php"
+    }
+  ]
 }
