--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.1",
+    "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
     "mocha": "1.0.x",
