--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-concat": "^2.4.1",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
+    "gulp-shell": "^0.2.10",
     "gulp-uglify": "^1.0.1",
     "mocha": "2.0.x",
     "should": "4.3.x"
