Add section on obstacles in user guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,9 @@ pages:
 - [index.md, Home]
 - ['user-guide/introduction.md', 'User Guide', 'Introduction']
 - ['user-guide/installation.md', 'User Guide', 'Installation']
-- ['user-guide/basic-usage.md', 'User Guide', 'Basic Usage']
-- ['user-guide/advanced-usage.md', 'User Guide', 'Advanced Usage']
+- ['user-guide/getting-started.md', 'User Guide', 'Getting Started']
+- ['user-guide/obstacles.md', 'User Guide', 'Obstacles']
+- ['user-guide/diagonal-movement.md', 'User Guide', 'Diagonal Movement']
 - ['user-guide/faq.md', 'User Guide', 'FAQ']
 - ['contributor-guide/contributing.md', 'Contributor Guide', 'Contributing']
 - ['contributor-guide/developing.md', 'Contributor Guide', 'Developing']
