--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.1",
+    "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-shell": "^0.2.10",
     "gulp-uglify": "^1.0.1",
+    "jshint-stylish": "^1.0.0",
     "mocha": "2.0.x",
     "should": "4.3.x"
   },
