--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "heap": "0.2.5"
   },
   "devDependencies": {
+    "colors": "^1.0.3",
     "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
@@ -26,10 +27,13 @@
     "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-shell": "^0.2.10",
     "gulp-uglify": "^1.0.1",
+    "inquirer": "^0.8.0",
     "jshint-stylish": "^1.0.0",
+    "jsonfile": "^2.0.0",
     "mocha": "2.0.x",
+    "semver": "^4.2.0",
+    "shelljs": "^0.3.0",
     "should": "4.3.x"
   },
   "scripts": {
